CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(astar)

IF(UNIX)
  SET(CMAKE_C_COMPILER gcc)
  SET(CMAKE_CXX_COMPILER g++)
  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fexceptions -Wno-unused-local-typedefs -ffunction-sections -fdata-sections")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fexceptions")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-local-typedefs -Wreorder -ffunction-sections -fdata-sections")
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer")

  SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -D_DEBUG -O0 -Wall")
  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wextra -Wpointer-arith -Wcast-qual")
  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wunreachable-code -Wundef -Woverloaded-virtual")
  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wdouble-promotion -Wunused-parameter -g -ggdb -fpic -fPIC")

  SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -DNDEBUG -Wall")
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Os")
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wextra -Wpointer-arith")
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wcast-qual -Wunreachable-code -Wundef")
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wdouble-promotion -Woverloaded-virtual")
  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wunused-parameter -g -fpic -fPIC")

ELSE(UNIX)
  SET(CMAKE_CONFIGURATION_TYPES "Debug;Release" )
  SET(CMAKE_C_COMPILER msvc)
  SET(CMAKE_CXX_COMPILER msvc)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3 /MP  /bigobj /wd4496 /wd4267 /wd4244 /Zi")
  SET(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG /MTd")
  SET(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG /MT /DEBUG:FASTLINK")
  SET(CMAKE_C_FLAGS_DEBUG "-DDEBUG /MTd")
  SET(CMAKE_C_FLAGS_RELEASE "-DNDEBUG /MT /DEBUG:FASTLINK")

  ADD_DEFINiTIONS(-D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -D_CRT_SECURE_NO_DEPRECATE -D_CRT_NONSTDC_NO_DEPRECATE)
  ADD_DEFINiTIONS(-D_WINSOCK_DEPRECATED_NO_WARNINGS)
  ADD_DEFINiTIONS(-DWIN32_LEAN_AND_MEAN -D_WIN32_WINNT=0x0501)
  ADD_DEFINITIONS(-DWIN32 -DWINDOWS)
ENDIF(UNIX)

ADD_EXECUTABLE(astar AStar.h MapTemplate.h main.cpp)
SOURCE_GROUP("Include" FILES AStar.h MapTemplate.h) 

SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE}/")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE}/")



